--- a/react_native_app/package.json
+++ b/react_native_app/package.json
@@ -11,19 +11,19 @@
     "dependencies": {
         "@react-navigation/native": "^6.1.9",
         "@react-navigation/stack": "^6.3.20",
-        "expo": "~50.0.2",
-        "expo-font": "^11.10.2",
-        "expo-status-bar": "~1.11.1",
+        "expo": "51",
+        "expo-font": "~12.0.9",
+        "expo-status-bar": "~1.12.1",
         "react": "18.2.0",
-        "react-native": "0.73.2",
-        "react-native-gesture-handler": "^2.14.1",
-        "react-native-reanimated": "^3.6.1",
-        "react-native-safe-area-context": "4.8.2",
-        "react-native-screens": "^3.29.0",
+        "react-native": "0.74.3",
+        "react-native-gesture-handler": "~2.16.1",
+        "react-native-reanimated": "~3.10.1",
+        "react-native-safe-area-context": "4.10.5",
+        "react-native-screens": "3.31.1",
         "react-navigation": "^5.0.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.20.0"
+        "@babel/core": "^7.24.0"
     },
     "private": true
 }
