--- a/Projects/ProductListApp/package.json
+++ b/Projects/ProductListApp/package.json
@@ -1,26 +1,28 @@
 {
-  "name": "productlistapp",
-  "version": "1.0.0",
-  "main": "expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
-  "dependencies": {
-    "@react-navigation/native": "^6.1.18",
-    "@react-navigation/stack": "^6.4.1",
-    "expo": "~51.0.21",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-native": "0.74.3",
-    "react-native-gesture-handler": "2.16",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0"
-  },
-  "private": true
+    "name": "productlistapp",
+    "version": "1.0.0",
+    "main": "expo/AppEntry.js",
+    "scripts": {
+        "start": "expo start --clear",
+        "android": "expo start --android",
+        "ios": "expo start --ios",
+        "web": "expo start --web"
+    },
+    "dependencies": {
+        "@react-native-masked-view/masked-view": "^0.3.1",
+        "@react-navigation/native": "^6.1.18",
+        "@react-navigation/stack": "^6.4.1",
+        "expo": "~51.0.21",
+        "expo-status-bar": "~1.12.1",
+        "react": "18.2.0",
+        "react-native": "0.74.3",
+        "react-native-gesture-handler": "2.16",
+        "react-native-linear-gradient": "^2.8.3",
+        "react-native-safe-area-context": "4.10.5",
+        "react-native-screens": "3.31.1"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.20.0"
+    },
+    "private": true
 }
