--- a/Projects/ProductListApp/package.json
+++ b/Projects/ProductListApp/package.json
@@ -9,17 +9,16 @@
         "web": "expo start --web"
     },
     "dependencies": {
-        "@react-native-masked-view/masked-view": "^0.3.1",
         "@react-navigation/native": "^6.1.18",
         "@react-navigation/stack": "^6.4.1",
         "expo": "~51.0.21",
+        "expo-font": "^12.0.9",
+        "expo-linear-gradient": "~13.0.2",
         "expo-status-bar": "~1.12.1",
         "react": "18.2.0",
         "react-native": "0.74.3",
-        "react-native-gesture-handler": "2.16",
-        "react-native-linear-gradient": "^2.8.3",
-        "react-native-safe-area-context": "4.10.5",
-        "react-native-screens": "3.31.1"
+        "react-native-gesture-handler": "2.16.1",
+        "react-native-safe-area-context": "4.10.5"
     },
     "devDependencies": {
         "@babel/core": "^7.20.0"
