--- a/React Native - The Practical Guide/docs/S4 Deep Dive Real App/BuildingAMiniGameApp/package.json
+++ b/React Native - The Practical Guide/docs/S4 Deep Dive Real App/BuildingAMiniGameApp/package.json
@@ -9,14 +9,14 @@
         "web": "expo start --web"
     },
     "dependencies": {
-        "expo": "~51.0.21",
+        "expo": "~51.0.22",
         "expo-status-bar": "~1.12.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-native": "0.74.3",
-        "react-native-web": "0.17.1",
-        "expo-linear-gradient": "~11.0.3",
-        "expo-font": "~10.0.4",
+        "react-native-web": "~0.19.10",
+        "expo-linear-gradient": "~13.0.2",
+        "expo-font": "~12.0.9",
         "expo-app-loading": "~1.3.0"
     },
     "devDependencies": {
