--- a/Projects/ProductListApp/app.json
+++ b/Projects/ProductListApp/app.json
@@ -1,33 +1,47 @@
 {
-  "expo": {
-    "name": "ProductListApp",
-    "slug": "productlistapp",
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "ios": {
-      "supportsTablet": true
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      }
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
-    },
-    "extra": {
-      "eas": {
-        "projectId": "184381fc-e9f1-433c-8896-66e9305c9c99"
-      }
-    },
-    "owner": "qliphort_shell"
-  }
+    "expo": {
+        "name": "ProductListApp",
+        "slug": "productlistapp",
+        "version": "1.0.0",
+        "orientation": "portrait",
+        "icon": "./assets/icon.png",
+        "userInterfaceStyle": "light",
+        "splash": {
+            "image": "./assets/splash.png",
+            "resizeMode": "contain",
+            "backgroundColor": "#ffffff"
+        },
+        "ios": {
+            "supportsTablet": true,
+            "infoPlist": {
+                "NSCameraUsageDescription": "This app uses the camera to allow users to take photos of products.",
+                "NSPhotoLibraryUsageDescription": "This app accesses the photo library to allow users to choose product images.",
+                "NSMicrophoneUsageDescription": "This app uses the microphone to record audio for product videos."
+            }
+        },
+        "android": {
+            "adaptiveIcon": {
+                "foregroundImage": "./assets/adaptive-icon.png",
+                "backgroundColor": "#ffffff"
+            },
+            "permissions": ["CAMERA", "READ_EXTERNAL_STORAGE", "WRITE_EXTERNAL_STORAGE", "RECORD_AUDIO"]
+        },
+        "web": {
+            "favicon": "./assets/favicon.png"
+        },
+        "plugins": [
+            [
+                "expo-av",
+                {
+                    "microphonePermission": "Allow $(PRODUCT_NAME) to access your microphone."
+                }
+            ]
+        ],
+        "extra": {
+            "eas": {
+                "projectId": "184381fc-e9f1-433c-8896-66e9305c9c99"
+            }
+        },
+        "owner": "qliphort_shell"
+    }
 }
