--- a/Projects/ProductListApp/package.json
+++ b/Projects/ProductListApp/package.json
@@ -12,16 +12,20 @@
         "@react-navigation/native": "^6.1.18",
         "@react-navigation/stack": "^6.4.1",
         "expo": "~51.0.21",
+        "expo-av": "^14.0.6",
         "expo-font": "^12.0.9",
         "expo-linear-gradient": "~13.0.2",
+        "expo-sqlite": "^14.0.4",
         "expo-status-bar": "~1.12.1",
         "react": "18.2.0",
         "react-native": "0.74.3",
         "react-native-gesture-handler": "2.16.1",
-        "react-native-safe-area-context": "4.10.5"
+        "react-native-safe-area-context": "4.10.5",
+        "react-native-snap-carousel": "^3.9.1"
     },
     "devDependencies": {
-        "@babel/core": "^7.20.0"
+        "@babel/core": "^7.20.0",
+        "@types/react-native-snap-carousel": "^3.8.11"
     },
     "private": true
 }
