--- a/Projects/ProductListApp/package.json
+++ b/Projects/ProductListApp/package.json
@@ -22,6 +22,7 @@
         "react": "18.2.0",
         "react-native": "0.74.3",
         "react-native-gesture-handler": "2.16.1",
+        "react-native-modal": "^13.0.1",
         "react-native-safe-area-context": "4.10.5",
         "react-native-screens": "3.31.1",
         "react-native-snap-carousel": "4.0.0-beta.6"
