--- a/Projects/ProductListApp/package.json
+++ b/Projects/ProductListApp/package.json
@@ -25,7 +25,8 @@
         "react-native-modal": "^13.0.1",
         "react-native-safe-area-context": "4.10.5",
         "react-native-screens": "3.31.1",
-        "react-native-snap-carousel": "4.0.0-beta.6"
+        "react-native-snap-carousel": "4.0.0-beta.6",
+        "react-native-sqlite-storage": "^6.0.1"
     },
     "devDependencies": {
         "@babel/core": "^7.20.0",
