--- a/Projects/ProductListApp/package.json
+++ b/Projects/ProductListApp/package.json
@@ -15,6 +15,7 @@
         "@react-navigation/stack": "^6.4.1",
         "expo": "~51.0.22",
         "expo-av": "^14.0.6",
+        "expo-file-system": "^17.0.1",
         "expo-font": "^12.0.9",
         "expo-linear-gradient": "~13.0.2",
         "expo-sqlite": "~14.0.5",
@@ -26,7 +27,9 @@
         "react-native-safe-area-context": "4.10.5",
         "react-native-screens": "3.31.1",
         "react-native-snap-carousel": "4.0.0-beta.6",
-        "react-native-sqlite-storage": "^6.0.1"
+        "react-native-sqlite-storage": "^6.0.1",
+        "react-native-toast-message": "^2.2.0",
+        "rn-responsive-screen": "^1.1.9"
     },
     "devDependencies": {
         "@babel/core": "^7.20.0",
