--- a/React Native - The Practical Guide/docs/S4 Deep Dive Real App/BuildingAMiniGameApp/package.json
+++ b/React Native - The Practical Guide/docs/S4 Deep Dive Real App/BuildingAMiniGameApp/package.json
@@ -10,14 +10,14 @@
     },
     "dependencies": {
         "expo": "~51.0.22",
+        "expo-app-loading": "^2.1.1",
+        "expo-font": "^12.0.9",
+        "expo-linear-gradient": "~13.0.2",
         "expo-status-bar": "~1.12.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-native": "0.74.3",
-        "react-native-web": "~0.19.10",
-        "expo-linear-gradient": "~13.0.2",
-        "expo-font": "~12.0.9",
-        "expo-app-loading": "~1.3.0"
+        "react-native-web": "~0.19.10"
     },
     "devDependencies": {
         "@babel/core": "^7.20.0"
