--- a/React Native - The Practical Guide/docs/S4 Deep Dive Real App/BuildingAMiniGameApp/package.json
+++ b/React Native - The Practical Guide/docs/S4 Deep Dive Real App/BuildingAMiniGameApp/package.json
@@ -9,6 +9,7 @@
         "web": "expo start --web"
     },
     "dependencies": {
+        "@expo/vector-icons": "^14.0.2",
         "expo": "~51.0.22",
         "expo-app-loading": "^2.1.1",
         "expo-font": "^12.0.9",
