--- a/React Native - The Practical Guide/docs/S6 React Native Navigation with React Navigation/DrawerUser/package.json
+++ b/React Native - The Practical Guide/docs/S6 React Native Navigation with React Navigation/DrawerUser/package.json
@@ -9,10 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/drawer": "^6.7.2",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
     "expo": "~51.0.24",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.3"
+    "react-native": "0.74.3",
+    "react-native-gesture-handler": "^2.18.0",
+    "react-native-reanimated": "^3.14.0",
+    "react-native-safe-area-context": "^4.10.8",
+    "react-native-screens": "^3.33.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
