--- a/React Native - The Practical Guide/docs/S7 App-wide State Management with Redux & Context API/MealsApp/package.json
+++ b/React Native - The Practical Guide/docs/S7 App-wide State Management with Redux & Context API/MealsApp/package.json
@@ -12,6 +12,7 @@
         "@react-navigation/drawer": "^6.7.2",
         "@react-navigation/native": "^6.1.18",
         "@react-navigation/native-stack": "^6.11.0",
+        "@reduxjs/toolkit": "^2.2.7",
         "expo": "~51.0.24",
         "expo-status-bar": "~1.12.1",
         "react": "18.2.0",
@@ -21,7 +22,8 @@
         "react-native-reanimated": "~3.10.1",
         "react-native-safe-area-context": "4.10.5",
         "react-native-screens": "3.31.1",
-        "react-native-web": "^0.19.12"
+        "react-native-web": "^0.19.12",
+        "react-redux": "^9.1.2"
     },
     "devDependencies": {
         "@babel/core": "^7.20.0"
