--- a/React Native - The Practical Guide/docs/S8 Time To Practice - The Expense Tracker App/ExpenseTrackerApp/package.json
+++ b/React Native - The Practical Guide/docs/S8 Time To Practice - The Expense Tracker App/ExpenseTrackerApp/package.json
@@ -17,8 +17,8 @@
     "react": "18.2.0",
     "react-dom": "^18.3.1",
     "react-native": "0.74.3",
-    "react-native-safe-area-context": "^4.10.8",
-    "react-native-screens": "^3.33.0",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
     "react-native-web": "^0.19.12"
   },
   "devDependencies": {
