--- a/React Native - The Practical Guide/docs/S11 User Authentication/UserAuth/package.json
+++ b/React Native - The Practical Guide/docs/S11 User Authentication/UserAuth/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "expensetrackerapp",
+    "name": "userauth",
     "version": "1.0.0",
     "main": "expo/AppEntry.js",
     "scripts": {
@@ -9,19 +9,14 @@
         "web": "expo start --web"
     },
     "dependencies": {
-        "@react-navigation/bottom-tabs": "^6.6.1",
         "@react-navigation/native": "^6.1.18",
         "@react-navigation/native-stack": "^6.11.0",
-        "axios": "^1.7.3",
         "expo": "~51.0.24",
         "expo-status-bar": "~1.12.1",
-        "firebase": "^10.12.5",
         "react": "18.2.0",
-        "react-dom": "^18.3.1",
         "react-native": "0.74.3",
-        "react-native-safe-area-context": "4.10.5",
-        "react-native-screens": "3.31.1",
-        "react-native-web": "^0.19.12"
+        "react-native-safe-area-context": "^4.10.8",
+        "react-native-screens": "^3.33.0"
     },
     "devDependencies": {
         "@babel/core": "^7.20.0"
