--- a/React Native - The Practical Guide/docs/S11 User Authentication/UserAuth/package.json
+++ b/React Native - The Practical Guide/docs/S11 User Authentication/UserAuth/package.json
@@ -9,10 +9,12 @@
         "web": "expo start --web"
     },
     "dependencies": {
+        "@react-native-async-storage/async-storage": "^1.24.0",
         "@react-navigation/native": "^6.1.18",
         "@react-navigation/native-stack": "^6.11.0",
         "axios": "^1.7.3",
         "expo": "~51.0.24",
+        "expo-app-loading": "^2.1.1",
         "expo-status-bar": "~1.12.1",
         "react": "18.2.0",
         "react-native": "0.74.3",
