install expo-image-picker

--- a/React Native - The Practical Guide/docs/S12 Using Native Device Features/LocationApp/package.json
+++ b/React Native - The Practical Guide/docs/S12 Using Native Device Features/LocationApp/package.json
@@ -12,6 +12,7 @@
         "@react-navigation/native": "^6.1.18",
         "@react-navigation/native-stack": "^6.11.0",
         "expo": "~51.0.24",
+        "expo-image-picker": "^15.0.7",
         "expo-status-bar": "~1.12.1",
         "react": "18.2.0",
         "react-native": "0.74.3"
