--- a/React Native - The Practical Guide/docs/S12 Using Native Device Features/LocationApp/app.json
+++ b/React Native - The Practical Guide/docs/S12 Using Native Device Features/LocationApp/app.json
@@ -12,13 +12,17 @@
             "backgroundColor": "#ffffff"
         },
         "ios": {
-            "supportsTablet": true
+            "supportsTablet": true,
+            "infoPlist": {
+                "NSCameraUsageDescription": "The app needs access to your camera in order to take photos of your favorite places."
+            }
         },
         "android": {
             "adaptiveIcon": {
                 "foregroundImage": "./assets/adaptive-icon.png",
                 "backgroundColor": "#ffffff"
-            }
+            },
+            "permissions": ["CAMERA"]
         },
         "web": {
             "favicon": "./assets/favicon.png"
@@ -28,6 +32,12 @@
                 "expo-image-picker",
                 {
                     "cameraPermission": "The app needs access to your camera in order to take photos of your favorite places."
+                }
+            ],
+            [
+                "expo-location",
+                {
+                    "locationAlwaysAndWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location."
                 }
             ]
         ]
