install expo-sqlite expo-app-loading

--- a/React Native - The Practical Guide/docs/S12 Using Native Device Features/LocationApp/package.json
+++ b/React Native - The Practical Guide/docs/S12 Using Native Device Features/LocationApp/package.json
@@ -12,8 +12,10 @@
         "@react-navigation/native": "^6.1.18",
         "@react-navigation/native-stack": "^6.11.0",
         "expo": "~51.0.24",
+        "expo-app-loading": "^2.1.1",
         "expo-image-picker": "^15.0.7",
         "expo-location": "^17.0.1",
+        "expo-sqlite": "^14.0.6",
         "expo-status-bar": "~1.12.1",
         "react": "18.2.0",
         "react-native": "0.74.3",
