--- a/React Native - The Practical Guide/docs/S12 Using Native Device Features/LocationApp/package.json
+++ b/React Native - The Practical Guide/docs/S12 Using Native Device Features/LocationApp/package.json
@@ -15,7 +15,7 @@
         "expo-app-loading": "^2.1.1",
         "expo-image-picker": "^15.0.7",
         "expo-location": "^17.0.1",
-        "expo-sqlite": "^14.0.6",
+        "expo-sqlite": "~10.1.0",
         "expo-status-bar": "~1.12.1",
         "react": "18.2.0",
         "react-native": "0.74.3",
